@@ -1,6 +1,8 @@
 2005-06-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
  configure.ac.in:
   - More, much more work on that stupid grep command line; works again
+ include/pqxx/util.hxx:
+  - Added warning about thread-safety of PQAlloc usage
 2005-05-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
  configure.ac.in:
   - Skip "outer grep" in generating config files if result is empty
